[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://place/place.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Place" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
texture = ExtResource( 1 )

[connection signal="input_event" from="." to="." method="_on_Place_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Place_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Place_mouse_exited"]
